--- a/Mirrack/Mirrack.csproj
+++ b/Mirrack/Mirrack.csproj
@@ -23,6 +23,9 @@
       <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Avalonia.ReactiveUI" Version="11.3.2" />
+    <PackageReference Include="SoundFlow" Version="1.1.1" />
+    <PackageReference Include="Vosk" Version="0.3.38" />
+    <PackageReference Include="WebRtcVadSharp" Version="1.3.2" />
   </ItemGroup>
 
   <ItemGroup>
