--- a/Mirrack/Mirrack.csproj
+++ b/Mirrack/Mirrack.csproj
@@ -44,5 +44,8 @@
     <Compile Update="Views\DemoModule\DemoContentView.axaml.cs">
       <DependentUpon>DemoContentView.axaml</DependentUpon>
     </Compile>
+    <Compile Update="Views\Templates\corner.axaml.cs">
+      <DependentUpon>Corner.axaml</DependentUpon>
+    </Compile>
   </ItemGroup>
 </Project>
