create a module definition standard

--- a/Mirrack/Mirrack.csproj
+++ b/Mirrack/Mirrack.csproj
@@ -54,4 +54,8 @@
       <DependentUpon>DemoContentView.axaml</DependentUpon>
     </Compile>
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Views\ClockModule\" />
+  </ItemGroup>
 </Project>
