--- a/Mirrack/Mirrack.csproj
+++ b/Mirrack/Mirrack.csproj
@@ -13,6 +13,12 @@
   </ItemGroup>
 
   <ItemGroup>
+  <None Update=".env">
+    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+  </None>
+</ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Avalonia" Version="11.3.2" />
     <PackageReference Include="Avalonia.Desktop" Version="11.3.2" />
     <PackageReference Include="Avalonia.Themes.Fluent" Version="11.3.2" />
@@ -23,6 +29,7 @@
       <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Avalonia.ReactiveUI" Version="11.3.2" />
+    <PackageReference Include="dotenv.net" Version="4.0.0" />
     <PackageReference Include="SoundFlow" Version="1.2.0" />
     <PackageReference Include="Vosk" Version="0.3.38" />
     <PackageReference Include="WebRtcVadSharp" Version="1.3.2" />
