--- a/Mirrack/Mirrack.csproj
+++ b/Mirrack/Mirrack.csproj
@@ -13,6 +13,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Assets\settings.png" />
+    <None Remove="Assets\weatherIcons\error.png" />
+    <None Remove="Assets\weatherIcons\loading.png" />
+  </ItemGroup>
+
+  <ItemGroup>
   <None Update=".env">
     <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
   </None>
